# backend/swagger/swagger.yaml
@@ -497,41 +497,6 @@ paths:
       security:
         - bearerAuth: []
 
-  /v1/signers/{name}/issue/cert:
-    post:
-      summary: Issue certificate
-      description: |
-        Generate a private key and sign a certificate for its public key with the specified signer.
-      tags:
-        - Signers
-      parameters:
-        - name: name
-          required: true
-          in: path
-          schema:
-            type: string
-      requestBody:
-        required: true
-        content:
-          application/json:
-            schema:
-              $ref: "#/components/schemas/CertIssueRequest"
-      responses:
-        "200":
-          description: Success
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/CertIssueResponse"
-        "400":
-          description: Failed
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/Error"
-      security:
-        - bearerAuth: []
-
   /v1/signers/{name}/sign:
     post:
       summary: Sign CSR
@@ -558,47 +523,6 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/CertSignResponse"
-        "400":
-          description: Failed
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/Error"
-      security:
-        - bearerAuth: []
-
-  /v1/signers/{name}/sign-document:
-    post:
-      summary: Sign document
-      description: Sign an arbitrary document with the specified signer.
-      tags:
-        - Signers
-      parameters:
-        - name: name
-          required: true
-          in: path
-          schema:
-            type: string
-        # - name: ttl
-        #   in: query
-        #   schema:
-        #     type: string
-        #   description: TTL for the signed document.
-      requestBody:
-        required: true
-        content:
-          application/octet-stream:
-            schema:
-              type: string
-              format: binary
-      responses:
-        "200":
-          description: Success
-          content:
-            application/octet-stream:
-              schema:
-                type: string
-                format: binary
         "400":
           description: Failed
           content:
@@ -1473,55 +1397,6 @@ components:
           description: The last update time of the signer
         config:
           $ref: "#/components/schemas/SignerConfig"
-
-    CertIssueRequest:
-      type: object
-      properties:
-        common_name:
-          type: string
-          example: "example.com"
-        alt_names:
-          type: string
-          example: "www.example.com,api.example.com"
-        exclude_cn_from_sans:
-          type: boolean
-          default: false
-        key_type:
-          type: string
-          enum: [rsa, ecdsa, ed25519]
-          default: rsa
-        ttl:
-          type: string
-          example: 720h
-        comment:
-          type: string
-          example: "Issued for example.com"
-      required:
-        - common_name
-
-    CertIssueResponse:
-      type: object
-      properties:
-        data:
-          type: object
-          properties:
-            private_key:
-              type: string
-            private_key_type:
-              type: string
-            serial_number:
-              type: string
-            expiration:
-              type: integer
-              format: int64
-            certificate:
-              type: string
-            issuing_ca:
-              type: string
-            ca_chain:
-              type: array
-              items:
-                type: string
 
     CertSignRequest:
       type: object
